--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,19 @@
   <packaging>war</packaging>
   <name>devops_project</name>
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+<dependency>
+<groupId>jstl</groupId>
+<artifactId>jstl</artifactId>
+<version>1.2</version>
+</dependency>
+  <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+<groupId>mysql</groupId>
+<artifactId>mysql-connector-java</artifactId>
+<version>8.0.25</version>
+</dependency>
+
 <dependency>
 <groupId>javax.servlet</groupId>
 <artifactId>javax.servlet-api</artifactId>
@@ -19,8 +32,8 @@
 <scope>provided</scope>
 </dependency>
 </dependencies>
+
   <build>
-  
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
