--- a/.classpath
+++ b/.classpath
@@ -26,7 +26,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
-	<classpathentry kind="lib" path="C:/Users/hhamm/Downloads/Required Forms/Required Forms/jars/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/hhamm/Downloads/Required Forms/Required Forms/jars/javax.mail-1.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/gking/Downloads/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/gking/Downloads/javax.mail-1.6.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
