--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-        <plugin>
+        <!--<plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
           <configuration>
@@ -84,7 +84,7 @@
           <suiteXmlFile>testng.xml</suiteXmlFile>
           </suiteXmlFiles>
           </configuration>
-        </plugin>
+        </plugin>-->
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
