--- a/.classpath
+++ b/.classpath
@@ -15,7 +15,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -26,7 +25,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
-	<classpathentry kind="lib" path="C:/Users/ryana/Dropbox/My PC (LAPTOP-R1VMEK1H)/Downloads/activation-1.1 (1).jar"/>
-	<classpathentry kind="lib" path="C:/Users/ryana/Dropbox/My PC (LAPTOP-R1VMEK1H)/Downloads/javax.mail-1.6.0 (1).jar"/>
+	<classpathentry kind="lib" path="C:/Users/lamxi/Downloads/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lamxi/Downloads/javax.mail-1.6.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
