--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,20 @@
 <version>1.2</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.0.0</version>
+    <scope>test</scope>
+</dependency>
 
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -76,6 +90,15 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
       </plugin>
+      
+      <plugin>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.22.1</version>
+      <configuration>
+      <suiteXmlFiles>testng2.xml</suiteXmlFiles>
+      </configuration>
+      </plugin>
+      
     </plugins>
   </build>
 </project>
