--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,19 @@
 <version>1.2</version>
 </dependency>
 
-
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.0.0</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
 
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -63,6 +68,8 @@
     <version>5.7.0</version>
     <scope>test</scope>
 </dependency>
+
+
 </dependencies>
 
   <build>
@@ -71,7 +78,15 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-        
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.1</version>
+          <configuration>
+          <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+          </configuration>
+        </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
