--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,35 @@
     <junit-jupiter.groupId>org.junit.jupiter</junit-jupiter.groupId>
     <junit-jupiter.artifactId>junit.jupiter</junit-jupiter.artifactId>
     <junit-jupiter.version>5.7.0</junit-jupiter.version>
+    <selenium.groupId>org.seleniumhq.selenium</selenium.groupId>
+    <selenium.artifactId>selenium-java</selenium.artifactId>
+    <selenium.version>2.53.1</selenium.version>
+    <testng.groupId>org.testng</testng.groupId>
+    <testng.artifactId>testng</testng.artifactId>
+    <testng.version>6.9.10</testng.version>
   </properties>
   
   
-  
+ 
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.0.0</version>
+    <scope>test</scope>
+</dependency>
+
+
+  
+  
   <!-- https://mvnrepository.com/artifact/jstl/jstl -->
 <dependency>
 <groupId>jstl</groupId>
@@ -71,7 +95,15 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-        
+        <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
+        <configuration>
+        <suiteXmlFiles>
+        <suiteXmlFile>testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+        </configuration>
+        </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
