--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
   
  
  <dependencies>
+
+<dependency>
+  <groupId>org.mockito</groupId>
+  <artifactId>mockito-core</artifactId>
+  <version>3.6.28</version>
+  <scope>test</scope>
+</dependency>
+
+ 
+ 
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
