--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
  <dependencies>
  
 <dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>javax.mail-api</artifactId>
+    <version>1.6.2</version>
+</dependency>
+ 
+<dependency>
   <groupId>org.mockito</groupId>
   <artifactId>mockito-core</artifactId>
   <version>3.6.28</version>
